<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.hnshhslsh.passwordredenvelopetool.MainActivity"
    android:orientation="vertical">
    
    <EditText
        android:id="@+id/editText"
        android:hint="@string/inputHint"
        android:layout_width="match_parent"
        android:layout_height="60dp" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode"
        android:id="@+id/checkBox"
        android:layout_gravity="right"
        android:checked="false" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btn_send"
            android:text="@string/btn_send"
            android:onClick="sendingPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_get"
            android:text="@string/btn_get"
            android:onClick="gettingPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <Button
        android:id="@+id/btn"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_show"
        android:onClick="click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tips" />

</LinearLayout>
